# domain-adaptive-patent-classifier

./: .gitignore  LICENCE  LICENSE  README.md  conda.yml  dev_requirements.txt  requirements.txt  setup.cfg
notebooks/: README.md  train_classifier.ipynb
scripts/: run_en.py  run_multi.py
src/dapc/: __init__.py  classifier.py  classifier_multilingual.py  labels_converter.py  languages_detector.py
src/dapc/models/: abstract_classifier.py  adapter_classifier.py  cnn_classifier.py  trans_cnn_classifier.py  transformer_classifier.py
